--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dom": "17.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
     "html-webpack-plugin": "^4.5.1",
     "ts-loader": "^8.0.13",
     "typescript": "^4.1.3",
